--- a/package.json
+++ b/package.json
@@ -7,17 +7,11 @@
     "build": "vue-cli-service build",
     "test:unit": "vue-cli-service test:unit",
     "test:e2e": "vue-cli-service test:e2e",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "docs:dev": "vuepress dev docs",
+    "docs:build": "vuepress build docs"
   },
-  "dependencies": {
-    "core-js": "^3.6.5",
-    "register-service-worker": "^1.7.1",
-    "vue": "^2.6.11",
-    "vue-class-component": "^7.2.3",
-    "vue-property-decorator": "^8.4.2",
-    "vue-router": "^3.2.0",
-    "vuex": "^3.4.0"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@types/jest": "^24.0.19",
     "@vue/cli-plugin-babel": "~4.5.0",
@@ -29,9 +23,17 @@
     "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "@vue/test-utils": "^1.0.3",
+    "core-js": "^3.6.5",
     "node-sass": "^4.12.0",
+    "register-service-worker": "^1.7.1",
     "sass-loader": "^8.0.2",
     "typescript": "~3.9.3",
-    "vue-template-compiler": "^2.6.11"
+    "vue": "^2.6.12",
+    "vue-class-component": "^7.2.6",
+    "vue-property-decorator": "^8.5.1",
+    "vue-router": "^3.4.8",
+    "vue-template-compiler": "^2.6.11",
+    "vuepress": "^1.7.1",
+    "vuex": "^3.5.1"
   }
 }
